<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreenDown"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="gov.jbb.jbbmobile.view.MainScreenActivity">

    <RelativeLayout
        android:id="@+id/mainScreenUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">

    <ImageView
        android:id="@+id/readQrCodeButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/camera"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/menuMoreButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:elevation="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:src="@mipmap/ic_menu_more"
            android:background="@drawable/shape_oval"
            />

        <ImageButton
            android:id="@+id/almanacButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:elevation="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="25dp"
            android:src="@mipmap/ic_book"
            android:background="@drawable/shape_oval"
            />

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:elevation="10dp"
            android:layout_above="@id/almanacButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="25dp"
            android:src="@mipmap/ic_map_white"
            android:background="@drawable/shape_oval"
            android:visibility="gone"/>

        <!-- TODO tirar daqui -->


        <TextView
            android:id="@+id/explorerScore"
            android:textStyle="bold"
            android:layout_width="120dp"
            android:layout_height="85dp"
            android:paddingTop="26sp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/leaf_score"
            android:layout_alignParentBottom="true"/>

        <ProgressBar
            android:id="@+id/energyBar"
            android:layout_width="270dp"
            android:layout_height="36dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_marginStart="81dp"
            android:progressDrawable="@drawable/energy_bar"
            android:layout_alignBottom="@+id/leafEnergy"
            android:layout_marginBottom="17dp" />

        <ImageView
            android:id="@+id/leafEnergy"
            android:layout_width="140sp"
            android:layout_height="115sp"
            android:src="@drawable/leaf_icon_energy"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:id="@+id/register_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="15dp"/>

        <RelativeLayout
            android:id="@+id/question_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:elevation="15dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/professor_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="15dp"/>

</RelativeLayout>