...
    <string name="rankingTitle">Ranking</string>

    <!-- Strings related to Professor -->
    <string name="professor_placeholder">Texto longo do Professor para teste da fragment Texto longo do Professor para teste da fragment Texto longo do Professor para teste da fragment Texto longo do Professor para teste da fragment</string>

    <!-- Strings related to QuestionController  -->
    <string name="trueAlternative">Verdadeiro</string>
    <string name="falseAlternative">Falso</string>

    <!-- String related to books -->
    <string name="firstBook">Águas</string>
    <string name="secondBook">Dormência</string>
    <string name="thirdBook">Renovação</string>
    <string name="textForTutorialChoice">Deseja realizar o tutorial agora?</string>
...
    <string name="moreInformationElement">Mais informações</string>
    <string name="moreInformationElementTutorial">Aqui você pode obter mais informações sobre esse elemento!</string>
    <string name="historyElement">Elemento da história</string>
    <string name="historyElementTutorial">Ao registrar um elemento da história, ele é mostrado de maneira especial!</string>
    <string name="leafScore">Pontuação</string>
    <string name="leafScoreTutorial">Aqui você pode acompanhar sua quantidade de pontos, ou seja, a soma de todos os pontos obtidos no decorrer da trilha!</string>
    <string name="map">Mapa de progresso</string>
    <string name="mapTutorial">Aqui você pode acompanhar seu progresso perante os elementos da história durante a trilha de acordo com a temporada!\nLembre-se que ele só aparece no momento em que você registrar o primeiro elemento da história!</string>
    <string name="almanac">Almanaque</string>
    <string name="almanacTutorial">Aqui você pode acessar todos os seus elementos já registrados, de modo organizado em seus respectivos livros!</string>
    <string name="almanacBook1">Livros do almanaque</string>
    <string name="almanacBook1Tutorial">Aqui você pode acessar todos os 3 livros que compõem o almanaque!\nLembre-se que cada um deles representa uma temporada diferente!</string>
    <string name="almanacBook2">Livros do almanaque</string>
...
    <string name="developers">Equipe de desenvolvedores (UnB)</string>
    <string name="devGroup">Allan Jeffrey \nHugo Alves \nIgor Gabriel \nJoão Paulo Soares \nJoão Vitor Araujo \nMateus Manuel \nRenata Soares \nRoger Lenke \nRonyell Henrique \nSabryna Sousa</string>
    <string name="sutec">Equipe da Superintendência Técnica (JBB)</string>
    <string name="sutecGroup">Ana Luiza Caldas \nVânia Araújo Soares</string>
    <string name="impossible_load_image">Impossível carregar a imagem.</string>
    <string name="try_photo_later">Impossível tirar foto, tente mais tarde.</string>
    <string name="preferences">Preferências</string>
    <string name="try_the_picture_later">Erro ao tirar foto! Tente mais tarde.</string>
    <string name="logging_in">Realizando login...</string>
    <string name="registering_user">Cadastrando usuário...</string>
    <string name="new_unlocked_achievement">Conquista desbloqueada:\n</string>
    <string name="zero_elements">Não há elementos registrados nessa temporada.</string>
</resources>
...
