<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gov.jbb.jbbmobile.view.AlmanacScreenActivity"
    android:background="@drawable/background_screens">

    <LinearLayout
        android:id="@+id/almanacTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_book"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="false"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="9"
            android:text="@string/almanac"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gridView"
        android:layout_alignStart="@+id/gridView"
        android:layout_below="@+id/almanacTitle"
        android:layout_marginTop="15dp"
        >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/orangeBook"
        android:src="@drawable/book_orange"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:focusable="true"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="60dp"
        android:background="@android:color/transparent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/greenBook"
        android:src="@drawable/book_green"
        android:maxWidth="50dp"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:minWidth="50dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="60dp"
        android:background="@android:color/transparent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueBook"
        android:layout_weight="1"
        android:src="@drawable/book_blue"
        android:layout_alignTop="@+id/orangeBook"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="60dp"
        android:background="@drawable/shape_grid_background" />

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView"
        android:numColumns="3"
        android:columnWidth="15dp"
        android:verticalSpacing="15dp"
        android:horizontalSpacing="10dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="@drawable/shape_grid_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zeroElements"
        android:layout_alignTop="@+id/gridView"
        android:layout_alignStart="@+id/gridView"
        android:layout_alignEnd="@+id/gridView"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="30dp"
        android:text="decoy"
        android:textSize="20sp"
        />



</RelativeLayout>
